[gd_scene load_steps=18 format=2]

[ext_resource path="res://interface/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/blackspoon_arena/BlackspoonArena.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/Montserrat-ExtraBold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://screens/splash_screen/splash_screen_theme.tres" type="Theme" id=4]
[ext_resource path="res://interface/Interface.gd" type="Script" id=5]
[ext_resource path="res://screens/splash_screen/title-font-200.tres" type="DynamicFont" id=6]
[ext_resource path="res://screens/play_screen/PlayScreen.gd" type="Script" id=7]
[ext_resource path="res://interface/recipe_interface/RecipeInterface.tscn" type="PackedScene" id=8]

[sub_resource type="InputEventAction" id=1]
action = "show_recipe"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DimmingRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.627451 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DiedLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 440 ), Vector2( 571.5, 440 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DiedLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RetryButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("RetryButton")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pause_tree"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pause_tree"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimmingRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.666667 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PauseLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload_current"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PauseLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimmingRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.666667 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "unpause_tree"
} ]
}

[sub_resource type="Animation" id=7]
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DimmingRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 4.1, 4.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewWaveLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 4.1, 4.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewWaveLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 296, 420 ), Vector2( 296, 420 ), Vector2( 626.5, 420 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NewWaveLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Ready?", "Start!" ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "pause_tree"
}, {
"args": [  ],
"method": "unpause_tree"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../Level")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="DynamicFont" id=8]
size = 200
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="PlayScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 72.0 ],
"_edit_use_anchors_": false
}

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="InterfaceLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeInterface" parent="InterfaceLayer/Interface" instance=ExtResource( 8 )]
visible = false

[node name="RecipeButton" type="Button" parent="InterfaceLayer/Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 16.0
margin_right = 59.0
margin_bottom = 61.0
focus_mode = 1
toggle_mode = true
enabled_focus_mode = 1
shortcut = SubResource( 2 )
text = "Recipe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" parent="InterfaceLayer/Interface" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 72.0

[node name="ScoreLabel" type="Label" parent="InterfaceLayer/Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_top = 24.0
margin_right = -106.0
margin_bottom = 70.0
rect_rotation = 0.600338
text = "Score: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="InterfaceLayer/Interface"]
anims/dead = SubResource( 3 )
anims/pause = SubResource( 4 )
anims/reload = SubResource( 5 )
anims/unpause = SubResource( 6 )
anims/wave_started = SubResource( 7 )

[node name="DimmingRect" type="ColorRect" parent="InterfaceLayer/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewWaveLabel" type="Label" parent="InterfaceLayer/Interface"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -664.0
margin_top = -120.0
margin_right = 121.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 310, 95 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0.392157, 0.968627, 1 )
custom_constants/shadow_offset_x = 15
custom_constants/shadow_offset_y = 15
text = "Ready?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PauseLabel" type="Label" parent="InterfaceLayer/Interface"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.0
margin_top = -100.0
margin_right = 331.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.423529, 0.376471, 0.705882, 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiedLabel" type="Label" parent="InterfaceLayer/Interface"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -560.0
margin_top = -100.0
margin_right = 217.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.423529, 0.376471, 0.705882, 1 )
text = "You died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="InterfaceLayer/Interface"]
visible = false
margin_left = 792.0
margin_top = 728.0
margin_right = 1080.0
margin_bottom = 776.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="InterfaceLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="InterfaceLayer/Fade"]
autoplay = "fade"
anims/fade = SubResource( 9 )
[connection signal="wave_finished" from="Level" to="InterfaceLayer/Interface" method="_on_Level_wave_finished"]
[connection signal="toggled" from="InterfaceLayer/Interface/RecipeButton" to="InterfaceLayer/Interface/RecipeInterface" method="set_visible"]
[connection signal="pressed" from="InterfaceLayer/Interface/RetryButton" to="InterfaceLayer/Interface/AnimationPlayer" method="play" binds= [ "reload" ]]
[connection signal="animation_finished" from="InterfaceLayer/Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
